# ebpf-system-monitor

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
bpf/: net_stats.bpf.c  syscall_audit.bpf.c  tcp_tracer.bpf.c
grafana/: dashboard.json  docker-compose.yml  grafana_dashboard.yml  prometheus.yml
include/: common.h
src/: ebpf_loader.h  monitor.cpp  stats_reporter.h
src/dpdk_sim/: memory_pool.h  packet_processor.h  spsc_ring.h
src/http/: async_server.h  metrics.h  request_stats.h  thread_pool.h
tests/: CMakeLists.txt  test_common.cpp  test_dpdk_sim.cpp  test_http.cpp  test_stats_reporter.cpp  test_thread_pool.cpp
